unpackaged/main/default/objects/Transaction__c/fields/eReceipt__c.field-meta.xml
<CustomField>
    <fullName>eReceipt__c</fullName>
    <defaultValue>true</defaultValue>
    <label>e Receipt</label>
    <type>Checkbox</type>
</CustomField>