unpackaged/main/default/objects/Transaction__c/fields/ExclTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>ExclTaxAmount__c</fullName>
    <label>Excl Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>