unpackaged/main/default/objects/Transaction__c/fields/ExclTaxTansactionShippingCost__c.field-meta.xml
<CustomField>
    <fullName>ExclTaxTansactionShippingCost__c</fullName>
    <label>Excl Tax Tansaction Shipping Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>