unpackaged/main/default/objects/Transaction__c/fields/GlobalDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>GlobalDiscountAmount__c</fullName>
    <label>Global Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>