unpackaged/main/default/objects/Transaction__c/fields/InclTaxTransactionShippingCost__c.field-meta.xml
<CustomField>
    <fullName>InclTaxTransactionShippingCost__c</fullName>
    <label>Incl Tax Transaction Shipping Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>