unpackaged/main/default/objects/Transaction__c/fields/IsGiftTransaction__c.field-meta.xml
<CustomField>
    <fullName>IsGiftTransaction__c</fullName>
    <label>Is Gift Transaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>false</fullName>
            </value>
            <value>
                <fullName>true</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>