unpackaged/main/default/objects/Transaction__c/fields/LocalOrTourist__c.field-meta.xml
<CustomField>
    <fullName>LocalOrTourist__c</fullName>
    <formula>IF(ISBLANK(TEXT(Client__r.Country__pc)),  
				&quot;Unlocalized&quot;, 
			 IF(TEXT(Client__r.Country__pc) = TEXT(Store__r.Country__c),
							&quot;Local&quot;, 
							&quot;Tourist&quot;
		) 	
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local or Tourist ?</label>
    <type>Text</type>
</CustomField>