unpackaged/main/default/objects/Transaction__c/fields/NbOfLines__c.field-meta.xml
<CustomField>
    <fullName>NbOfLines__c</fullName>
    <label># Of Lines</label>
    <summaryFilterItems>
        <field>TransactionItem__c.Type__c</field>
        <operation>equals</operation>
        <value>Sale, Return</value>
    </summaryFilterItems>
    <summaryForeignKey>TransactionItem__c.Transaction__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>