unpackaged/main/default/objects/Transaction__c/fields/NbOfTransactions__c.field-meta.xml
<CustomField>
    <fullName>NbOfTransactions__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>