unpackaged/main/default/objects/Transaction__c/fields/ShippingMethod__c.field-meta.xml
<CustomField>
    <fullName>ShippingMethod__c</fullName>
    <label>Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>express_FR</fullName>
            </value>
            <value>
                <fullName>express_DE</fullName>
            </value>
            <value>
                <fullName>express_DK</fullName>
            </value>
            <value>
                <fullName>express_IT</fullName>
            </value>
            <value>
                <fullName>express_US</fullName>
            </value>
            <value>
                <fullName>standard_AD</fullName>
            </value>
            <value>
                <fullName>standard_AT</fullName>
            </value>
            <value>
                <fullName>standard_BE</fullName>
            </value>
            <value>
                <fullName>standard_CH</fullName>
            </value>
            <value>
                <fullName>standard_CZ</fullName>
            </value>
            <value>
                <fullName>standard_DE</fullName>
            </value>
            <value>
                <fullName>standard_DK</fullName>
            </value>
            <value>
                <fullName>standard_EE</fullName>
            </value>
            <value>
                <fullName>standard_ES</fullName>
            </value>
            <value>
                <fullName>standard_FI</fullName>
            </value>
            <value>
                <fullName>standard_FR</fullName>
            </value>
            <value>
                <fullName>standard_GB</fullName>
            </value>
            <value>
                <fullName>standard_GR</fullName>
            </value>
            <value>
                <fullName>standard_HR</fullName>
            </value>
            <value>
                <fullName>standard_HU</fullName>
            </value>
            <value>
                <fullName>standard_IE</fullName>
            </value>
            <value>
                <fullName>standard_IT</fullName>
            </value>
            <value>
                <fullName>standard_JP</fullName>
            </value>
            <value>
                <fullName>standard_LI</fullName>
            </value>
            <value>
                <fullName>standard_LT</fullName>
            </value>
            <value>
                <fullName>standard_LU</fullName>
            </value>
            <value>
                <fullName>standard_LV</fullName>
            </value>
            <value>
                <fullName>standard_MC</fullName>
            </value>
            <value>
                <fullName>standard_MT</fullName>
            </value>
            <value>
                <fullName>standard_NL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>