unpackaged/main/default/objects/Transaction__c/fields/SourceTransactionId__c.field-meta.xml
<CustomField>
    <fullName>SourceTransactionId__c</fullName>
    <externalId>true</externalId>
    <label>Source Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>