unpackaged/main/default/objects/Transaction__c/fields/StoreId__c.field-meta.xml
<CustomField>
    <fullName>StoreId__c</fullName>
    <label>Store Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>