unpackaged/main/default/objects/Transaction__c/fields/StoreIdFormula__c.field-meta.xml
<CustomField>
    <fullName>StoreIdFormula__c</fullName>
    <formula>Store__r.SourceStoreId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Id</label>
    <type>Text</type>
</CustomField>