unpackaged/main/default/objects/Transaction__c/fields/TaxRefund__c.field-meta.xml
<CustomField>
    <fullName>TaxRefund__c</fullName>
    <label>Tax Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>