unpackaged/main/default/objects/Transaction__c/fields/TransactionChannel__c.field-meta.xml
<CustomField>
    <fullName>TransactionChannel__c</fullName>
    <label>Transaction Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WEB</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>Popup</fullName>
            </value>
            <value>
                <fullName>E-wholsale</fullName>
            </value>
            <value>
                <fullName>Mobile Store</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>store</fullName>
                <label>Store</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>