unpackaged/main/default/objects/Transaction__c/fields/TransactionQuarter__c.field-meta.xml
<CustomField>
    <fullName>TransactionQuarter__c</fullName>
    <formula>IF( MONTH(TransactionDate__c ) &lt; 4, &#39;Q1&#39;, 

     IF( MONTH(TransactionDate__c ) &lt; 7 , &#39;Q2&#39;, 
       IF( MONTH(TransactionDate__c ) &lt; 10 , &#39;Q3&#39;, &#39;Q4&#39;) 
       )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Quarter</label>
    <type>Text</type>
</CustomField>