unpackaged/main/default/objects/Transaction__c/fields/TransactionSemester__c.field-meta.xml
<CustomField>
    <fullName>TransactionSemester__c</fullName>
    <formula>IF( MONTH(TransactionDate__c ) &lt; 7, &#39;H1&#39;,&#39;H2&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Semester</label>
    <type>Text</type>
</CustomField>