unpackaged/main/default/objects/Transaction__c/fields/VendorFullName__c.field-meta.xml
<CustomField>
    <fullName>VendorFullName__c</fullName>
    <label>Vendor Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>