unpackaged/main/default/objects/Transaction__c/fields/VendorID__c.field-meta.xml
<CustomField>
    <fullName>VendorID__c</fullName>
    <label>Vendor ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>