unpackaged/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>VendorFullName__c</columns>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>ExclTaxAmount__c</columns>
    <columns>ShippingMethod__c</columns>
    <columns>SourceTransactionId__c</columns>
    <columns>Store__c</columns>
    <columns>TransactionChannel__c</columns>
    <columns>TransactionDate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>StoreIdFormula__c</columns>
    <columns>StoreId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vendor__c</field>
        <operation>contains</operation>
        <value>nishino</value>
    </filters>
    <filters>
        <field>Store__c</field>
        <operation>contains</operation>
        <value>OMOTESANDO</value>
    </filters>
    <label>All</label>
</ListView>