unpackaged/main/default/objects/Transaction__c/listViews/All_Transactions.listView-meta.xml
<ListView>
    <fullName>All_Transactions</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Store__c</columns>
    <columns>TransactionDate__c</columns>
    <columns>ExclTaxAmount__c</columns>
    <columns>TransactionChannel__c</columns>
    <columns>VendorFullName__c</columns>
    <columns>Vendor__c</columns>
    <columns>VendorID__c</columns>
    <columns>IsGiftTransaction__c</columns>
    <columns>UCRInternalId__c</columns>
    <columns>Client__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Transactions</label>
</ListView>